
BUG FIXES and IMPROVEMENTS
* Use correct license in OpenStreetMap attribution. (#811)

* Update jQuery to utilize `{jquerylib}`. (#817)

* `leafletOutput()`'s `height` and `width` now defaults to `NULL`, allowing it have more flexible default sizing behavior, which will be primarily useful in combination with `{bslib}`'s new `card()` API. (#2192)


leaflet 2.1.1
--------------------------------------------------------------------------------

BUG FIXES and IMPROVEMENTS
* The default marker icon for `addMarkers` no longer worked, due to the CDN we were relying on apparently being retired. Fixed by pointing to a new CDN. (#782)

* New behavior from tile.openstreetmap.org caused `addTiles` default tileset to break when viewed under non-https protocol on recent versions of Chrome. Fixed by always using the https protocol to connect to openstreetmap. (#786)

* Added support for SpatRaster and SpatVector objects from the terra package. (#728)

leaflet 2.1.0
--------------------------------------------------------------------------------

BUG FIXES and IMPROVEMENTS
* Enable JS function literals (wrapped in `htmlwidgets::JS()`) to be included in arguments to methods invoked on `leafletProxy` objects. (JS function literals could already be included with methods invoked on `leaflet` objects, so this change just brings `leafletProxy` to parity.) (#420)

* Add missing CSS rule to show `<img>` in right-pane and left-pane (rstudio/rmarkdown/issues#1949, #770)

* Allow for _hidden_ but not suspended leaflet maps to queue calls (such as add raster images) until they are rendered. If a new leaflet map is created, all pending calls are removed. (#771)

leaflet 2.0.4.1
--------------------------------------------------------------------------------

FEATURES
* Updated proj4.js to 2.6.2

BUG FIXES and IMPROVEMENTS
* Minor tweaks to example data and tests, required to stay on CRAN
